<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/ux_fragment"
            android:name="com.google.ar.sceneform.ux.ArFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_toolbar"/>

    <TextView
            android:id="@+id/txtDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="#80000000"
            android:padding="10dp"
            android:text="@string/mark_2_points"
            android:textColor="#FFF"
            android:textSize="16sp"/>

    <Button
            android:id="@+id/btnResetAr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDistance"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:backgroundTint="#CCFF0000"
            android:text="@string/reset_points"
            android:textColor="#FFF"/>

    <Button
            android:id="@+id/btnNext"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#6200EE"
            android:text="@string/next_step"
            android:textColor="#FFF"/>

</RelativeLayout>